Barra superior PARTE 1

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,20 @@
 *{
     font-family: "Open Sans",sans-serif;
 }
+html,body{
+    background-color: #ddd;
+}
+header {
+    box-sizing: border-box;
+    background-color: #4D41C0;
+    color: #fff;
+}
+nav {
+   display: flex; 
+   align-items: center;
+   justify-content: space-between;
+}
+a, a:hover{
+    text-decoration: none;
+    color: unset;
+}
