--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,53 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
+:root{
+   --bg-gray: #ddd;
+   --colo-primary: #4D41c0;
+   ---white:#ffff;
+}
+
 *{
+    
+    box-sizing: border-box;
     font-family: "Open Sans",sans-serif;
 }
+h1,h2,h3,h4,h5,h6{
+    margin: 0;
+}
 html,body{
-    background-color: #ddd;
+    background-color: var(--bg-gray);
 }
 header {
-    box-sizing: border-box;
-    background-color: #4D41C0;
-    color: #fff;
+    background-color:var(--colo-primary) ;
+    color: var(---white);
+    height: 60px;
+    display: flex;
+    align-items: center;
 }
+
 nav {
    display: flex; 
    align-items: center;
    justify-content: space-between;
 }
+nav a {
+    font-size: 12px;
+    font-weight: 400;
+}
+nav h1 {
+    font-size: 24px;
+    font-weight: 700;
+}
 a, a:hover{
     text-decoration: none;
     color: unset;
+}
+.dsmovie-contact-container{
+    display: flex;
+    align-items: center;
+
+}
+.dsmovie-contact-container img{
+margin-right: 10px;
 }
