--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ margin-right: 10px;
     padding: 40px 0;
 }
 .dsmovie-card{
-    width:360px;
+    width:100%;
     
 }
 .dsmovie-card img{
@@ -64,17 +64,21 @@ margin-right: 10px;
     border-radius:8px 8px 0 0 ;
 }
 .dsmovie-card-desciption{
-    padding: 10px 0 20px 0;
+    background-color:var(--white);
+    padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color:var(--white) ;
+    justify-content: space-between;
     border-radius: 0 0 8px 8px ;
+    min-height:150px;
 }
 .dsmovie-card-desciption h3{
     font-size: 14px;
     font-weight: 700;
     margin-bottom: 25px ;
+    text-align: center;
+    
 }
 .dsmovie-btn,.dsmovie-btn:hover{
     width: 180px;
