--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
    --color-primary: #4D41c0;
    --white:#ffff;
    --text-gray:#4a4a4a;
+   --text-light-gray:#AAA
+
 }
 
 *{
@@ -92,8 +94,39 @@ margin-right: 10px;
     align-items: center;
     justify-content: center;
     border-radius: 4px;
+    border: 0;
 }
 .dsmovie-form-container{
     padding: 40px 0;
     max-width: 480px;
+}
+.dsmovie-form-description{
+  background-color:var(--white);  
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius:  0 0 8px 8px;
+}
+.dsmovie-form{
+width: 100%;
+}
+.dsmovie-form-description h3{
+font-size: 13px;
+font-weight: 700;
+margin-bottom: 20px ;
+}
+.dsmovie-form-group{
+    margin-bottom: 20px ;
+}
+.dsmovie-form-group label {
+    font-size: 12px;
+    color: var(--text-light-gray);
+}
+.dsmovie-form-btn-container{
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
