--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,10 @@
 :root{
    --bg-gray: #ddd;
    --color-primary: #4D41c0;
+   --text-light-gray:#AAA;
    --white:#ffff;
    --text-gray:#4a4a4a;
-   --text-light-gray:#AAA
-
+   --star-yellow: #FFBB3A;
 }
 
 *{
@@ -74,7 +74,7 @@ margin-right: 10px;
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px ;
-    min-height:150px;
+    height:220px;
 }
 .dsmovie-card-description h3{
     font-size: 14px;
@@ -82,6 +82,29 @@ margin-right: 10px;
     margin-bottom: 25px ;
     text-align: center;
     
+}
+
+.dsmovie-card-description-bottom {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.dsmovie-card-description-bottom h4 {
+font-size: 16px;
+font-weight: 700;
+color: var(--star-yellow);
+}
+
+.dsmovie-card-description-bottom img {
+    width: 22px;
+}
+.dsmovie-card-description-bottom p{
+font-size: 12px;
+font-weight:400;
+color: var(--text-light-gray);
+margin-bottom: 10px;
+
 }
 .dsmovie-btn,.dsmovie-btn:hover{
     width: 180px;
