--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ a, a:hover{
 margin-right: 10px;
 }
 #dsmovie-card-list{
-    padding: 40px 0;
+    padding: 40px 10px;
 }
 .dsmovie-card{
 
@@ -74,12 +74,12 @@ margin-right: 10px;
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px ;
-    height:220px;
+    height:190px;
 }
 .dsmovie-card-description h3{
     font-size: 14px;
     font-weight: 700;
-    margin-bottom: 25px ;
+    margin-bottom: 10px ;
     text-align: center;
     
 }
